--- a/travel/index.html
+++ b/travel/index.html
@@ -69,7 +69,7 @@
                                 <span class="ico ico_fly"></span>
                             </span>
                         </div>
-                        <h4>We will give you recommendations</h4>
+                        <h4> will give you recommendations</h4>
                     </div>            
                 </div>
             </section>
