--- a/travel/index.html
+++ b/travel/index.html
@@ -74,8 +74,75 @@
                 </div>
             </section>
             <section class="destinations">
-                
+                <h2>POPULAR DESTINATIONS</h2>
+                <div class="destinations">
+                    <div class="destination1">
+                        <div class="destination1_img">
+                            <img src="/travel/images/Rectangle 23.jpg" alt="SPAIN">
+                            <p class="destination1_text">SPAIN</p>
+                        </div>
+                    </div>
+                    <div class="destination2">
+                        <div class="destination2_img">
+                            <img src="/travel/images/Rectangle 24.jpg" alt="SPAIN">
+                            <p class="destination2_text">SPAIN</p>
+                        </div>
+                    </div>
+                    <div class="destination3">
+                        <div class="destination3_img">
+                            <img src="/travel/images/Rectangle 25.jpg" alt="SPAIN">
+                            <p class="destination3_text">SPAIN</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="ellipse">
+                    <span class="ellipse1"></span>
+                    <span class="ellipse2"></span>
+                    <span class="ellipse2"></span>
+                </div>
+                <div class="destination_button">
+                    <button class="button"><span class="icon_destination"></span>Find More</button>
+                </div>
             </section>
+            <section class="stories">
+                <div class="4stories">
+                    <h2>TRAVEL STORIES</h2>
+                    <div class="story1">
+                        <div class="story1_img">
+                            <img src="/travel/images/Rectangle 15.jpg" alt="Thailand">
+                        </div>
+                        <h3>10 Photos of Attractive Thailand</h3>
+                        <p class="story1_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... Read More</p>
+                    </div>
+                    <div class="story2">
+                        <div class="story2_img">
+                            <img src="/travel/images/Rectangle 16.jpg" alt="USA">
+                        </div>
+                        <h3>Canyonlands National Park, Utah</h3>
+                        <p class="story1_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... Read More</p>
+                    </div>
+                    <div class="story3">
+                        <div class="story3_img">
+                            <img src="/travel/images/Rectangle 17.jpg" alt="Mountain">
+                        </div>
+                        <h3>I left my heart in the Mountains!</h3>
+                        <p class="story1_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... Read More</p>
+                    </div>
+                    <div class="story4">
+                        <div class="story4_img">
+                            <img src="/travel/images/Rectangle 18.jpg" alt="Journey">
+                        </div>
+                        <h3>The Longest journey in my life!</h3>
+                        <p class="story1_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... Read More</p>
+                    </div>
+                </div>
+                <div class="stories_button">
+                    <button class="button"><span class="icon_stories"></span>See More</button>
+                </div>
+            </section>
+            <footer>
+                
+            </footer>
         </main>
 </body>
 </html>
