init: add footer

--- a/travel/index.html
+++ b/travel/index.html
@@ -141,7 +141,12 @@
                 </div>
             </section>
             <footer>
-                
+                <p class="text_footer">All Rights Reserved © Travel Portal</p>
+                <div class="footer_ico">
+                    <span class="ico ico_insta"></span>
+                    <span class="ico ico_youtube"></span>
+                    <span class="ico ico_twitte"></span>
+                </div>
             </footer>
         </main>
 </body>
