--- a/travel/index.html
+++ b/travel/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>travel</title>
+    <link rel="stylesheet" href="/travel/style.css">
 </head>
 <body>
     <div class="backgraund_header_preview">
