--- a/travel/index.html
+++ b/travel/index.html
@@ -85,14 +85,14 @@
                     </div>
                     <div class="destination2">
                         <div class="destination2_img">
-                            <img src="/travel/images/Rectangle 24.jpg" alt="SPAIN">
-                            <p class="destination2_text">SPAIN</p>
+                            <img src="/travel/images/Rectangle 24.jpg" alt="JAPAN">
+                            <p class="destination2_text">JAPAN</p>
                         </div>
                     </div>
                     <div class="destination3">
                         <div class="destination3_img">
-                            <img src="/travel/images/Rectangle 25.jpg" alt="SPAIN">
-                            <p class="destination3_text">SPAIN</p>
+                            <img src="/travel/images/Rectangle 25.jpg" alt="USA">
+                            <p class="destination3_text">USA</p>
                         </div>
                     </div>
                 </div>
