fix: images puth

--- a/travel/index.html
+++ b/travel/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>travel</title>
-    <link rel="stylesheet" href="/travel/style.css">
+    <link rel="stylesheet" href="../travel/style.css">
 </head>
 <body>
     <div class="backgraund_header_preview">
@@ -13,7 +13,7 @@
             <div class="header_rectangle">
                 <div class="logo_line">
                     <a href="#" class="logo">
-                        <object type="image/svg+xml" data="/travel/images/Vector.svg" class="logo-object">
+                        <object type="image/svg+xml" data="../travel/images/Vector.svg" class="logo-object">
                         </object>
                     </a>
                     <p class="logo_name">Travel Portal</p>
@@ -79,19 +79,19 @@
                 <div class="destinations">
                     <div class="destination1">
                         <div class="destination1_img">
-                            <img src="/travel/images/Rectangle 23.jpg" alt="SPAIN">
+                            <img src="../travel/images/Rectangle 23.jpg" alt="SPAIN">
                             <p class="destination1_text">SPAIN</p>
                         </div>
                     </div>
                     <div class="destination2">
                         <div class="destination2_img">
-                            <img src="/travel/images/Rectangle 24.jpg" alt="JAPAN">
+                            <img src="../travel/images/Rectangle 24.jpg" alt="JAPAN">
                             <p class="destination2_text">JAPAN</p>
                         </div>
                     </div>
                     <div class="destination3">
                         <div class="destination3_img">
-                            <img src="/travel/images/Rectangle 25.jpg" alt="USA">
+                            <img src="../travel/images/Rectangle 25.jpg" alt="USA">
                             <p class="destination3_text">USA</p>
                         </div>
                     </div>
@@ -110,28 +110,28 @@
                     <h2>TRAVEL STORIES</h2>
                     <div class="story1">
                         <div class="story1_img">
-                            <img src="/travel/images/Rectangle 15.jpg" alt="Thailand">
+                            <img src="../travel/images/Rectangle 15.jpg" alt="Thailand">
                         </div>
                         <h3>10 Photos of Attractive Thailand</h3>
                         <p class="story1_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... Read More</p>
                     </div>
                     <div class="story2">
                         <div class="story2_img">
-                            <img src="/travel/images/Rectangle 16.jpg" alt="USA">
+                            <img src="../travel/images/Rectangle 16.jpg" alt="USA">
                         </div>
                         <h3>Canyonlands National Park, Utah</h3>
                         <p class="story1_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... Read More</p>
                     </div>
                     <div class="story3">
                         <div class="story3_img">
-                            <img src="/travel/images/Rectangle 27.jpg" alt="Mountain">
+                            <img src="../travel/images/Rectangle 27.jpg" alt="Mountain">
                         </div>
                         <h3>I left my heart in the Mountains!</h3>
                         <p class="story1_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... Read More</p>
                     </div>
                     <div class="story4">
                         <div class="story4_img">
-                            <img src="/travel/images/Rectangle 17.jpg" alt="Journey">
+                            <img src="../travel/images/Rectangle 17.jpg" alt="Journey">
                         </div>
                         <h3>The Longest journey in my life!</h3>
                         <p class="story1_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... Read More</p>
