feat: add css style

--- a/travel/index.html
+++ b/travel/index.html
@@ -13,7 +13,7 @@
             <div class="header_rectangle">
                 <div class="logo_line">
                     <a href="#" class="logo">
-                        <object type="image/svg+xml" data="../travel/images/Vector.svg" class="logo-object">
+                        <object type="image/svg+xml" data="../travel/images/VectorHeader.svg" class="logo_object">
                         </object>
                     </a>
                     <p class="logo_name">Travel Portal</p>
