feat: css header, preview

--- a/travel/index.html
+++ b/travel/index.html
@@ -13,8 +13,7 @@
             <div class="header_rectangle">
                 <div class="logo_line">
                     <a href="#" class="logo">
-                        <object type="image/svg+xml" data="../travel/images/VectorHeader.svg" class="logo_object">
-                        </object>
+                        <object type="image/svg+xml" data="../travel/images/VectorHeader.svg" class="logo_object"></object>
                     </a>
                     <p class="logo_name">Travel Portal</p>
                 </div>
@@ -27,7 +26,7 @@
                     </ul>
                 </nav>
                 <div class="header_button">
-                    <button class="button button_login">Login</button>
+                    <button class="button_login">Login</button>
                 </div>
             </div>
         </header>
