--- a/travel/index.html
+++ b/travel/index.html
@@ -45,9 +45,11 @@
             </section>
     </div>
             <section class="steps">
-                <h2>3 STEPS TO THE PERFECT TRIP</h2>
-                <div class="3_steps">
-                    <div class="step1">
+                <div  class="stepsh2">
+                    <h2>3 STEPS TO THE PERFECT TRIP</h2>
+                </div>
+                <div class="three_steps">
+                    <div class="step">
                         <div class="step_icon">
                             <span class="icon_square">
                                 <span class="ico ico_bycicle"></span>
@@ -55,7 +57,7 @@
                         </div>
                         <h4>Tell us what you want to do</h4>
                     </div>
-                    <div class="step2">
+                    <div class="step">
                         <div class="step_icon">
                             <span class="icon_square">
                                 <span class="ico ico_calendar"></span>
@@ -63,7 +65,7 @@
                         </div>
                         <h4>Share us preferable dates</h4>
                     </div>
-                    <div class="step3">
+                    <div class="step">
                         <div class="step_icon">
                             <span class="icon_square">
                                 <span class="ico ico_fly"></span>
@@ -74,31 +76,33 @@
                 </div>
             </section>
             <section class="destinations">
-                <h2>POPULAR DESTINATIONS</h2>
-                <div class="destinations">
+                <div class="destinations_name">
+                    <h2>POPULAR DESTINATIONS</h2>
+                </div>
+                <div class="destination">
                     <div class="destination1">
-                        <div class="destination1_img">
+                        <div class="destination_img">
                             <img src="../travel/images/Rectangle 23.jpg" alt="SPAIN">
-                            <p class="destination1_text">SPAIN</p>
+                            <p class="destination_text">SPAIN</p>
                         </div>
                     </div>
                     <div class="destination2">
-                        <div class="destination2_img">
+                        <div class="destination_img">
                             <img src="../travel/images/Rectangle 24.jpg" alt="JAPAN">
-                            <p class="destination2_text">JAPAN</p>
+                            <p class="destination_text">JAPAN</p>
                         </div>
                     </div>
                     <div class="destination3">
-                        <div class="destination3_img">
+                        <div class="destination_img">
                             <img src="../travel/images/Rectangle 25.jpg" alt="USA">
-                            <p class="destination3_text">USA</p>
+                            <p class="destination_text">USA</p>
                         </div>
                     </div>
                 </div>
                 <div class="ellipse">
-                    <span class="ellipse1"></span>
-                    <span class="ellipse2"></span>
-                    <span class="ellipse2"></span>
+                    <div class="ellipse1"></div>
+                    <div class="ellipse2"></div>
+                    <div class="ellipse3"></div>
                 </div>
                 <div class="destination_button">
                     <button class="button"><span class="icon_destination"></span>Find More</button>
