feat: add main block and css

--- a/travel/index.html
+++ b/travel/index.html
@@ -100,58 +100,74 @@
                     </div>
                 </div>
                 <div class="ellipse">
-                    <div class="ellipse1"></div>
-                    <div class="ellipse2"></div>
-                    <div class="ellipse3"></div>
+                    <span class="ellipse1"></span>
+                    <span class="ellipse2"></span>
+                    <span class="ellipse3"></span>
                 </div>
                 <div class="destination_button">
-                    <button class="button"><span class="icon_destination"></span>Find More</button>
+                    <button class="button button_dist"><img class="buttondist_img" src="../travel/images/arrow.svg"> Find More</button>
                 </div>
             </section>
             <section class="stories">
-                <div class="4stories">
+                <div class="storie_name">
                     <h2>TRAVEL STORIES</h2>
-                    <div class="story1">
-                        <div class="story1_img">
-                            <img src="../travel/images/Rectangle 15.jpg" alt="Thailand">
+                </div>
+                <div class="backgroundstoriefoot">
+                <div class="fon">
+                    <div class="stories4">
+                        <div class="story">
+                            <div class="story_img1">
+                                <img class="story_img" src="../travel/images/Rectangle 29.jpg" alt="Thailand">
+                            </div>
+                            <div class="story_info">
+                                <h3>10 Photos of Attractive Thailand</h3>
+                                <p class="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a href="#" style="color:#0D606F">Read More</a></p>
+                            </div>
                         </div>
-                        <h3>10 Photos of Attractive Thailand</h3>
-                        <p class="story1_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... Read More</p>
+                        <div class="story">
+                            <div class="story_img2">
+                                <img class="story_img" src="../travel/images/Rectangle 30.jpg" alt="USA">
+                            </div>
+                            <div class="story_info">
+                                <h3>Canyonlands National Park, Utah</h3>
+                                <p class="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a href="#" style="color:#0D606F">Read More</a></p>
+                            </div>
+                        </div>
+                        <div class="story">
+                            <div class="story_img3">
+                                <img class="story_img" src="../travel/images/Rectangle 31.jpg" alt="Mountain">
+                            </div>
+                            <div class="story_info">
+                                <h3>I left my heart in the Mountains!</h3>
+                                <p class="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a href="#" style="color:#0D606F">Read More</a></p>
+                            </div>
+                        </div>
+                        <div class="story">
+                            <div class="story_img4">
+                                <img class="story_img" src="../travel/images/Rectangle 32.jpg" alt="Journey">
+                            </div>
+                            <div class="story_info">
+                                <h3>The Longest journey in my life!</h3>
+                                <p class="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a href="#" style="color:#0D606F">Read More</a></p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="story2">
-                        <div class="story2_img">
-                            <img src="../travel/images/Rectangle 16.jpg" alt="USA">
-                        </div>
-                        <h3>Canyonlands National Park, Utah</h3>
-                        <p class="story1_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... Read More</p>
-                    </div>
-                    <div class="story3">
-                        <div class="story3_img">
-                            <img src="../travel/images/Rectangle 27.jpg" alt="Mountain">
-                        </div>
-                        <h3>I left my heart in the Mountains!</h3>
-                        <p class="story1_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... Read More</p>
-                    </div>
-                    <div class="story4">
-                        <div class="story4_img">
-                            <img src="../travel/images/Rectangle 17.jpg" alt="Journey">
-                        </div>
-                        <h3>The Longest journey in my life!</h3>
-                        <p class="story1_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... Read More</p>
+                    <div class="stories_button">
+                        <button class="button button_story"><img class="buttonstory_img" src="../travel/images/arrow.svg"></span>See More</button>
                     </div>
                 </div>
-                <div class="stories_button">
-                    <button class="button"><span class="icon_stories"></span>See More</button>
-                </div>
+                    <footer>
+                        <p class="text_footer">All Rights Reserved © Travel Portal</p>
+                        <div class="socialmedia">
+                            <ul class="footer_ico">
+                                <li class="ico ico_insta"></li>
+                                <li class="ico ico_youtube"></li>
+                                <li class="ico ico_twitte"></li>
+                            </ul>
+                        </div>
+                    </footer>
+                </div>    
             </section>
-            <footer>
-                <p class="text_footer">All Rights Reserved © Travel Portal</p>
-                <div class="footer_ico">
-                    <span class="ico ico_insta"></span>
-                    <span class="ico ico_youtube"></span>
-                    <span class="ico ico_twitte"></span>
-                </div>
-            </footer>
         </main>
-</body>
+    </body>
 </html>
