--- a/travel/index.html
+++ b/travel/index.html
@@ -19,10 +19,10 @@
                 </div>
                 <nav class="header_navigation">
                     <ul class="navigation">
-                        <li class="navigation_link">How It Works</li>
-                        <li class="navigation_link">Plan You Trip</li>
-                        <li class="navigation_link">Destinations</li>
-                        <li class="navigation_link">Travel Stories</li>
+                        <li class="navigation_link"><a href="#steps">How It Works</a></li>
+                        <li class="navigation_link"><a href="#steps">Plan You Trip</a></li>
+                        <li class="navigation_link"><a href="#dest">Destinations</a></li>
+                        <li class="navigation_link"><a href="#story">Travel Stories</a></li>
                     </ul>
                 </nav>
                 <div class="header_button">
@@ -46,7 +46,7 @@
     </div>
             <section class="steps">
                 <div  class="stepsh2">
-                    <h2>3 STEPS TO THE PERFECT TRIP</h2>
+                    <h2><a name="steps"></a>3 STEPS TO THE PERFECT TRIP</h2>
                 </div>
                 <div class="three_steps">
                     <div class="step">
@@ -77,7 +77,7 @@
             </section>
             <section class="destinations">
                 <div class="destinations_name">
-                    <h2>POPULAR DESTINATIONS</h2>
+                    <h2><a name="dest"></a>POPULAR DESTINATIONS</h2>
                 </div>
                 <div class="destination">
                     <div class="destination1">
@@ -110,7 +110,7 @@
             </section>
             <section class="stories">
                 <div class="storie_name">
-                    <h2>TRAVEL STORIES</h2>
+                    <h2><a name="story"></a>TRAVEL STORIES</h2>
                 </div>
                 <div class="backgroundstoriefoot">
                 <div class="fon">
@@ -121,7 +121,7 @@
                             </div>
                             <div class="story_info">
                                 <h3>10 Photos of Attractive Thailand</h3>
-                                <p class="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a href="#" style="color:#0D606F">Read More</a></p>
+                                <p class="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a href="#"><b><u>Read More</u></b></a></p>
                             </div>
                         </div>
                         <div class="story">
@@ -130,7 +130,7 @@
                             </div>
                             <div class="story_info">
                                 <h3>Canyonlands National Park, Utah</h3>
-                                <p class="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a href="#" style="color:#0D606F">Read More</a></p>
+                                <p class="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a href="#"><b><u>Read More</u></b></a></p>
                             </div>
                         </div>
                         <div class="story">
@@ -139,7 +139,7 @@
                             </div>
                             <div class="story_info">
                                 <h3>I left my heart in the Mountains!</h3>
-                                <p class="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a href="#" style="color:#0D606F">Read More</a></p>
+                                <p class="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a href="#"><b><u>Read More</u></b></a></p>
                             </div>
                         </div>
                         <div class="story">
@@ -148,7 +148,7 @@
                             </div>
                             <div class="story_info">
                                 <h3>The Longest journey in my life!</h3>
-                                <p class="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a href="#" style="color:#0D606F">Read More</a></p>
+                                <p class="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a href="#"><b><u>Read More</u></b></a></p>
                             </div>
                         </div>
                     </div>
@@ -157,12 +157,14 @@
                     </div>
                 </div>
                     <footer>
-                        <p class="text_footer">All Rights Reserved © Travel Portal</p>
-                        <div class="socialmedia">
+                        <div class="text">
+                            <p class="text_footer">All Rights Reserved © Travel Portal</p>
+                        </div>    
+                        <div class="social">
                             <ul class="footer_ico">
-                                <li class="ico ico_insta"></li>
-                                <li class="ico ico_youtube"></li>
-                                <li class="ico ico_twitte"></li>
+                                <a href="https://rs.school/js-stage0/" target="_blank"><li class="ico ico_insta"></li></a>
+                                <a href="https://github.com/IlyaPluh" target="_blank"><li class="ico ico_youtube"></li> </a>                                  
+                                <a href="https://www.linkedin.com/in/ilyaandryianau/" target="_blank"><li class="ico ico_twitter"></li></a>
                             </ul>
                         </div>
                     </footer>
