--- a/travel/index.html
+++ b/travel/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../travel/style.css">
 </head>
 <body>
-    <div class="backgraund_header_preview">
+<div class="backgraund_header_preview">
         <header class="header">
             <div class="header_rectangle">
                 <div class="logo_line">
@@ -43,7 +43,7 @@
                     </div>
                 </div>
             </section>
-    </div>
+</div>
             <section class="steps">
                 <div  class="stepsh2">
                     <h2><a name="steps"></a>3 STEPS TO THE PERFECT TRIP</h2>
@@ -105,7 +105,7 @@
                     <span class="ellipse3"></span>
                 </div>
                 <div class="destination_button">
-                    <button class="button button_dist"><img class="buttondist_img" src="../travel/images/arrow.svg"> Find More</button>
+                    <button class="button button_dist"><img class="buttondist_img" src="../travel/images/arrow.svg" alt="butdistim"> Find More</button>
                 </div>
             </section>
             <section class="stories">
@@ -153,7 +153,7 @@
                         </div>
                     </div>
                     <div class="stories_button">
-                        <button class="button button_story"><img class="buttonstory_img" src="../travel/images/arrow.svg"></span>See More</button>
+                        <button class="button button_story"><img class="buttonstory_img" src="../travel/images/arrow.svg" alt="butstor">See More</button>
                     </div>
                 </div>
                     <footer>
