feat: add header 390px

--- a/travel/index.html
+++ b/travel/index.html
@@ -15,6 +15,9 @@
                     <a href="#" class="logo">
                         <object type="image/svg+xml" data="../travel/images/VectorHeader.svg" class="logo_object"></object>
                     </a>
+                    <span class="hamburger">
+                        <span class="hamburger_line"></span>
+                    </span>
                     <p class="logo_name">Travel Portal</p>
                 </div>
                 <nav class="header_navigation">
