--- a/travel/index.html
+++ b/travel/index.html
@@ -95,6 +95,12 @@
                             <p class="destination_text">JAPAN</p>
                         </div>
                     </div>
+                    <div class="destination2S">
+                        <div class="destinationS_img">
+                            <img src="../travel/images/Rectangle 23S.jpg" alt="SPAIN">
+                            <p class="destinationS_text">SPAIN</p>
+                        </div>
+                    </div>
                     <div class="destination3">
                         <div class="destination_img">
                             <img src="../travel/images/Rectangle 25.jpg" alt="USA">
@@ -108,7 +114,7 @@
                     <span class="ellipse3"></span>
                 </div>
                 <div class="destination_button">
-                    <button class="button button_dist"><img class="buttondist_img" src="../travel/images/arrow.svg" alt="butdistim"> Find More</button>
+                    <button class="button button_dist"><img class="buttondist_img" src="../travel/images/arrow.svg" alt="butdistim"><img class="buttondistS_img" src="../travel/images/arrS.svg" alt="butdistim">Find More</button>
                 </div>
             </section>
             <section class="stories">
@@ -121,42 +127,46 @@
                         <div class="story">
                             <div class="story_img1">
                                 <img class="story_img" src="../travel/images/Rectangle 29.jpg" alt="Thailand">
+                                <img class="storyS_img" src="../travel/images/Rectangle15S.jpg" alt="Thailand">
                             </div>
                             <div class="story_info">
                                 <h3>10 Photos of Attractive Thailand</h3>
-                                <p class="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a href="#"><b><u>Read More</u></b></a></p>
+                                <p class="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla Lorem ipsum dolor sit a...<a href="#"><b><u>Read More</u></b></a></p>
                             </div>
                         </div>
                         <div class="story">
                             <div class="story_img2">
                                 <img class="story_img" src="../travel/images/Rectangle 30.jpg" alt="USA">
+                                <img class="storyS_img" src="../travel/images/Rectangle16S.jpg" alt="USA">
                             </div>
                             <div class="story_info">
                                 <h3>Canyonlands National Park, Utah</h3>
-                                <p class="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a href="#"><b><u>Read More</u></b></a></p>
+                                <p class="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla Lorem ipsum dolor sit a...<a href="#"><b><u>Read More</u></b></a></p>
                             </div>
                         </div>
                         <div class="story">
                             <div class="story_img3">
                                 <img class="story_img" src="../travel/images/Rectangle 31.jpg" alt="Mountain">
+                                <img class="storyS_img" src="../travel/images/Rectangle27S.jpg" alt="Mountain">
                             </div>
                             <div class="story_info">
                                 <h3>I left my heart in the Mountains!</h3>
-                                <p class="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a href="#"><b><u>Read More</u></b></a></p>
+                                <p class="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla Lorem ipsum dolor sit a...<a href="#"><b><u>Read More</u></b></a></p>
                             </div>
                         </div>
                         <div class="story">
                             <div class="story_img4">
                                 <img class="story_img" src="../travel/images/Rectangle 32.jpg" alt="Journey">
+                                <img class="storyS_img" src="../travel/images/Rectangle17S.jpg" alt="Journey">
                             </div>
                             <div class="story_info">
                                 <h3>The Longest journey in my life!</h3>
-                                <p class="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a href="#"><b><u>Read More</u></b></a></p>
+                                <p class="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla Lorem ipsum dolor sit a...<a href="#"><b><u>Read More</u></b></a></p>
                             </div>
                         </div>
                     </div>
                     <div class="stories_button">
-                        <button class="button button_story"><img class="buttonstory_img" src="../travel/images/arrow.svg" alt="butstor">See More</button>
+                        <button class="button button_story"><img class="buttonstory_img" src="../travel/images/arrow.svg" alt="butstor"><img class="buttondistS_img" src="../travel/images/arrS.svg" alt="butdistim">See More</button>
                     </div>
                 </div>
                     <footer>
