--- a/travel/index.html
+++ b/travel/index.html
@@ -184,5 +184,6 @@
                 </div>    
             </section>
         </main>
+        <script src="../travel/index.js"></script>
     </body>
 </html>
