--- a/travel/index.html
+++ b/travel/index.html
@@ -26,6 +26,8 @@
                         <li class="navigation_link"><a href="#steps">Plan You Trip</a></li>
                         <li class="navigation_link"><a href="#dest">Destinations</a></li>
                         <li class="navigation_link"><a href="#story">Travel Stories</a></li>
+                        <li class="navigation_link Account">Account</a></li>
+                        <li class="navigation_link SocialMedia"><a href="#footer">Social Media</a></li>
                     </ul>
                 </nav>
                 <div class="header_button">
@@ -171,7 +173,7 @@
                 </div>
                     <footer>
                         <div class="text">
-                            <p class="text_footer">All Rights Reserved © Travel Portal</p>
+                            <p class="text_footer"><a name="footer"></a>All Rights Reserved © Travel Portal</p>
                         </div>    
                         <div class="social">
                             <ul class="footer_ico">
