--- a/travel/index.html
+++ b/travel/index.html
@@ -15,9 +15,6 @@
                     <a href="#" class="logo">
                         <object type="image/svg+xml" data="../travel/images/VectorHeader.svg" class="logo_object"></object>
                     </a>
-                    <span class="hamburger">
-                        <span class="hamburger_line"></span>
-                    </span>
                     <p class="logo_name">Travel Portal</p>
                 </div>
                 <nav class="header_navigation">
@@ -26,10 +23,13 @@
                         <li class="navigation_link"><a href="#steps">Plan You Trip</a></li>
                         <li class="navigation_link"><a href="#dest">Destinations</a></li>
                         <li class="navigation_link"><a href="#story">Travel Stories</a></li>
-                        <li class="navigation_link Account">Account</a></li>
+                        <li class="navigation_link Account">Account</li>
                         <li class="navigation_link SocialMedia"><a href="#footer">Social Media</a></li>
                     </ul>
                 </nav>
+                <span class="hamburger">
+                    <span class="hamburger_line"></span>
+                </span>
                 <div class="header_button">
                     <button class="button_login">Login</button>
                 </div>
@@ -173,9 +173,9 @@
                 </div>
                     <footer>
                         <div class="text">
-                            <p class="text_footer"><a name="footer"></a>All Rights Reserved © Travel Portal</p>
+                            <p class="text_footer">All Rights Reserved © Travel Portal</p>
                         </div>    
-                        <div class="social">
+                        <div class="social"><a name="footer"></a>
                             <ul class="footer_ico">
                                 <a href="https://rs.school/js-stage0/" target="_blank"><li class="ico ico_insta"></li></a>
                                 <a href="https://github.com/IlyaPluh" target="_blank"><li class="ico ico_youtube"></li> </a>                                  
@@ -186,6 +186,7 @@
                 </div>    
             </section>
         </main>
+        <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
         <script src="../travel/index.js"></script>
     </body>
 </html>
