--- a/travel/index.html
+++ b/travel/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="../travel/style.css">
 </head>
 <body>
+    <div class="pop-up hidden">
+        <div class="pop-up_content">
+            <p class="pop-up_name">Log in to your account</p>
+        </div>
+    </div>
 <div class="backgraund_header_preview">
         <header class="header">
             <div class="header_rectangle">
