--- a/travel/index.html
+++ b/travel/index.html
@@ -11,6 +11,10 @@
     <div class="pop-up hidden">
         <div class="pop-up_content">
             <p class="pop-up_name">Log in to your account</p>
+            <p class="pop-up_name">Log in to your account</p>
+            <p class="pop-up_name">Log in to your account</p>
+            <p class="pop-up_name">Log in to your account</p>
+            <p class="pop-up_name">Log in to your account</p>
         </div>
     </div>
 <div class="backgraund_header_preview">
